under construction page added

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
                 </h1>
             </div>  
             <div class="ButtonSidebarWrapper">
-                <button class="ButtonSidebar">
+                <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
                 <img src="./Images/Icon_Human.png" alt="icon" style="width:20px; height:20px; vertical-align: middle;">
                 About Me
                 </button>  
-                <button class="ButtonSidebar">
+                <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
                 <img src="./Images/Icon_Experience.png" alt="icon" style="width:20px; height:20px; vertical-align: middle;">
                 Experience
                 </button>  
-                <button class="ButtonSidebar">
+                <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
                 <img src="./Images/Icon_Project.png" alt="icon" style="width:20px; height:20px; vertical-align: middle;">
                 Projects
                 </button>  
-                <button class="ButtonSidebar">
+                <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
                 <img src="./Images/Icon_VFX.png" alt="icon" style="width:20px; height:20px; vertical-align: middle;">
                 VFX
                 </button>  
-                <button class="ButtonSidebar">
+                <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
                 <img src="./Images/Icon_3D.png" alt="icon" style="width:20px; height:20px; vertical-align: middle;">
                 3D
                 </button>  
