somewhat fixed scrolling issues

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF=8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LukasNy</title>    
         <link rel="stylesheet" href="styles.css">
@@ -26,29 +26,34 @@
             </div>  
             <div class="ButtonSidebarWrapper">
                 <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
-                <img src="./Images/Icon_Human.png" alt="icon" style="width:1.4vw; height:2vh; vertical-align: middle;">
+                <img src="./Images/Icon_Human.png" alt="icon" style="width:1.5vw; height:3vh; vertical-align: middle;">
                 About Me
                 </button>  
                 <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
-                <img src="./Images/Icon_Experience.png" alt="icon" style="width:1.4vw; height:2vh; vertical-align: middle;">
+                <img src="./Images/Icon_Experience.png" alt="icon" style="width:1.5vw; height:3vh; vertical-align: middle;">
                 Experience
                 </button>  
                 <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
-                <img src="./Images/Icon_Project.png" alt="icon" style="width:1.4vw; height:2vh; vertical-align: middle;">
+                <img src="./Images/Icon_Project.png" alt="icon" style="width:1.5vw; height:3vh; vertical-align: middle;">
                 Projects
                 </button>  
                 <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
-                <img src="./Images/Icon_VFX.png" alt="icon" style="width:1.4vw; height:2vh; vertical-align: middle;">
+                <img src="./Images/Icon_VFX.png" alt="icon" style="width:1.5vw; height:3vh; vertical-align: middle;">
                 VFX
                 </button>  
                 <button class="ButtonSidebar" onclick="location.href='./Pages/UnderConstruction.html'">
-                <img src="./Images/Icon_3D.png" alt="icon" style="width:1.4vw; height:2vh; vertical-align: middle;">
+                <img src="./Images/Icon_3D.png" alt="icon" style="width:1.5vw; height:3vh; vertical-align: middle;">
                 3D
                 </button>  
             </div>
         </div>
 
         <div class="OpenAreaWrapper">
+
+
+
+
+            
             <div class="ContentBox">
                 <div class="ContentBoxImage">
                     <img src="./Images/TestImage.png" alt="test">
@@ -68,11 +73,15 @@
                     </h3>
                 </div>
                 <h1 class="ContentBoxHeader">
-                    <img src="./Images/Icon_3D.png" alt="icon" style="width:25px; height:25px; vertical-align: middle; padding-right: 2%;">
+                    <img src="./Images/Icon_3D.png" alt="icon" style="width:1.5vw; height:3vh; vertical-align: middle; padding-right: 2%;">
                     3D Mech Model  <!-- Insert Title Here -->
                 </h1>
-                </div>
             </div>
+
+
+
+
+
         </div>
         
     </body>
