added video animation to the contentbox

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 
 
 
-            <button class="ContentBox" data-tilt data-tilt-max="15" data-tilt-speed="500" onclick="location.href='./Pages/UnderConstruction.html'">
+            <button class="ContentBox" data-tilt data-tilt-max="15" data-tilt-speed="500" onclick="location.href='./Pages/UnderConstruction.html'"
+            onmouseover="document.getElementById('WebsiteMechaVideo').play();" onmouseout="document.getElementById('WebsiteMechaVideo').pause();">
                 <div class="ContentBoxImage">
-                    <img src="./Images/TestImage.png" alt="test">
+                    <video src="./Videos/WebsiteMechaVideo.mov" id="WebsiteMechaVideo" loop muted></video>
                 </div>
                 <div class="TagsWrapper">
                      <h3 class="TagText">
