--- a/Pages/Content-3D-Heron.html
+++ b/Pages/Content-3D-Heron.html
@@ -45,7 +45,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem recusandae error reprehenderit vero temporibus unde ipsa accusantium expedita cupiditate blanditiis laborum voluptatibus a aut, quidem dicta voluptas, officia iure doloribus.
                     </h2>
                 </div>
-                <img src="../Images/HeronRender.PNG" class="MoreContentImage">
+                <img src="../Images/HeronRender.png" class="MoreContentImage">
             </div>
         </div>
 
