Finished v1 of the heron page

--- a/Pages/Content-3D-Heron.html
+++ b/Pages/Content-3D-Heron.html
@@ -26,7 +26,10 @@
                     Heron Mech Model
                 </h1>
                 <h2 class="MainText">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut non rem pariatur saepe, dolorum iste distinctio, animi quod, ipsum nulla reprehenderit quisquam repudiandae. Delectus quo cupiditate voluptates quibusdam earum qui.
+                    I created this 3D model using hard surface modeling techniques in Blender 4.3. The final model consists of approximately 249,300 triangles.
+                    The entire development process, including ideation and design iteration, took roughly 14 hours. Since the model is intended for cinematic and non-real-time use,
+                    I created the booster rocket visual effects directly within Blender using its built-in VFX tools. If this had been a game-ready asset,
+                    I would have opted to develop the visual effects using Unity’s Shuriken particle system for better performance optimization in real-time environments.
                 </h2>
             </div>
             <video src="../Videos/WebsiteMechaVideo.mov" class="MainVideo" autoplay loop muted></video>
@@ -34,21 +37,25 @@
         
         <div class="MoreContentWrapper">
             <div class="MoreContentbox">
-                <img src="../Images/HeronWireframe.PNG" class="MoreContentImage">
+                <img src="../Images/HeronRender.png" class="MoreContentImage1">
                 <div class="MoreContentText">
                     <h2>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem recusandae error reprehenderit vero temporibus unde ipsa accusantium expedita cupiditate blanditiis laborum voluptatibus a aut, quidem dicta voluptas, officia iure doloribus.
+                        I also created a render of the mech in flight, depicted soaring through the sky.
+                        The environment features a custom sky shader, which I projected onto a dome within Blender 4.3 to provide a stylized atmospheric backdrop.
+                        While the majority of the image was developed entirely in Blender, I performed additional post-processing using external image editing software to enhance the final composition.
+                        To further refine the visual style and emphasize the model’s silhouette and form, I utilized Blender’s Freestyle line art tool, which added a clean illustrative touch to the renders
                     </h2>
                 </div>
                 <div class="MoreContentText">
                     <h2>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem recusandae error reprehenderit vero temporibus unde ipsa accusantium expedita cupiditate blanditiis laborum voluptatibus a aut, quidem dicta voluptas, officia iure doloribus.
+                        This mech is part of a larger collection of original designs I’ve developed in my spare time to refine my skills in 3D modeling, visual effects, and overall asset development.
                     </h2>
                 </div>
-                <img src="../Images/HeronRender.png" class="MoreContentImage">
+                <img src="../Images/MultipleMechs.png" class="MoreContentImage2">
             </div>
         </div>
 
+    
 
     </body>
     <script src="https://cdn.jsdelivr.net/npm/animejs/lib/anime.iife.min.js"></script>    
